-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Integration
-
Fully Compatible
-
ALL
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
-
0
One of the two problems that caused BF-37501 was pinpointed to AccuratePercentile::incorporate(const std::vector<double>&) which was getting inlined in v4 but stopped getting inlined in v5. This is easily fixed by using MONGO_COMPILER_ALWAYS_INLINE. I ran a perf analysis for all of the percentiles workloads and it shows that we gain back ~half of the lost performance that shows up in the BF.
- related to
-
SERVER-105664 Add a macro that forces inlining for buying back v5 toolchain perf regressions
-
- Closed
-