SERVER-105527 Force inlining AccuratePercentiles::incorporate(double) with the v5 toolchain (#36633)

GitOrigin-RevId: ca8d665ea1461d9d5f6a8bcbd8a8dcd6d0d2a6d6